# -Elden_Ring_game_tools

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  CT_FEATURE_MATRIX_CN.md  CT_MIGRATION_ANALYSIS.md  CT_V425_FULL_ANALYSIS_CN.md  CT_V425_FULL_TREE_CN.md  MOD_FEATURES.md  PROJECT_EXPLANATION_CN.md  PROJECT_FEATURES.md  README.md  README.zh-CN.md  REFERENCES.md  TGA_CT_FULL_FEATURES_CN.csv  TGA_CT_FULL_TREE_CN.md  _xaml_ascii_values_now.txt  _xaml_literals_after_round1.txt  _xaml_literals_en.txt  _xaml_remaining_grouped.txt  _xaml_remaining_grouped_after2.txt  build_dist.ps1  erdGameTools.ini  更容易弹反_AA脚本_1.16.1.txt
.claude/: settings.local.json
Erd-Tools-CPP-main/: README.md
Erd-Tools-CPP-main/Erd-Tools-CPP/Hook/: ParamHook.cpp
Erd-Tools-CPP-main/Erd-Tools-CPP/Util/: ParamEditor.h
Resources/: BossRevives-zh-CN.csv  BossRevives.csv  NpcMenus.zh.txt
Resources/Lang/: en-US.txt  zh-CN.txt
Source/: Common.hpp  ERDMod.cpp  ERDMod.hpp  dllmain.cpp
Source/Features/: CharacterFlags.cpp  CharacterFlags.hpp  GameActions.cpp  GameActions.hpp  InspectorTools.cpp  InspectorTools.hpp  MassItemGibData.hpp  MovementMods.cpp  MovementMods.hpp  NpcDebug.cpp  NpcDebug.hpp  ParamPatches.cpp  ParamPatches.hpp  PostureBars.cpp  PostureBars.hpp  SpEffectMonitor.cpp  SpEffectMonitor.hpp  UnlockData.hpp  Unlocks.cpp  Unlocks.hpp
Source/Game/: EventFlags.cpp  EventFlags.hpp  ParamEditor.hpp  Params.hpp  SingletonRegistry.cpp
Source/Main/: Config.cpp  Config.hpp  D3D12Overlay.cpp  D3D12Overlay.hpp  FeatureStatus.hpp  Logger.cpp  Paths.cpp  Paths.hpp  Runtime.cpp  Runtime.hpp
Source/Param/: ACTIONBUTTON_PARAM_ST.hpp  AI_ANIM_TBL_PARAM.hpp  AI_ATTACK_PARAM_ST.hpp  AI_ODDS_PARAM.hpp  AI_SOUND_PARAM_ST.hpp  AI_STANDARD_INFO_BANK.hpp  ASSET_GEOMETORY_PARAM_ST.hpp  ASSET_MATERIAL_SFX_PARAM_ST.hpp  ASSET_MODEL_SFX_PARAM_ST.hpp  ATK_PARAM_ST.hpp  ATTACK_ELEMENT_CORRECT_PARAM_ST.hpp  AUTO_CREATE_ENV_SOUND_PARAM_ST.hpp  BASECHR_SELECT_MENU_PARAM_ST.hpp  BEHAVIOR_PARAM_ST.hpp  BONFIRE_WARP_PARAM_ST.hpp  BONFIRE_WARP_SUB_CATEGORY_PARAM_ST.hpp  BONFIRE_WARP_TAB_PARAM_ST.hpp  BUDDY_PARAM_ST.hpp  BUDDY_STONE_PARAM_ST.hpp  BUDGET_PARAM_ST.hpp  BULLET_CREATE_LIMIT_PARAM_ST.hpp  BULLET_PARAM_ST.hpp  CACL_CORRECT_GRAPH_ST.hpp  CAMERA_FADE_PARAM_ST.hpp  CEREMONY_PARAM_ST.hpp  CHARACTER_INIT_PARAM.hpp  CHARMAKEMENUTOP_PARAM_ST.hpp  CHARMAKEMENU_LISTITEM_PARAM_ST.hpp  CHR_ACTIVATE_CONDITION_PARAM_ST.hpp  CHR_EQUIP_MODEL_PARAM_ST.hpp  CHR_MODEL_PARAM_ST.hpp  CLEAR_COUNT_CORRECT_PARAM_ST.hpp  COMMON_SYSTEM_PARAM_ST.hpp  COOL_TIME_PARAM_ST.hpp  CS_AA_QUALITY_DETAIL.hpp  CS_DECAL_QUALITY_DETAIL.hpp  CS_DOF_QUALITY_DETAIL.hpp  CS_EFFECT_QUALITY_DETAIL.hpp  CS_GRAPHICS_CONFIG_PARAM_ST.hpp  CS_KEY_ASSIGN_MENUITEM_PARAM.hpp  (+155 more)
TarnishedTool-CN/: TarnishedTool.sln
TarnishedTool-CN/TarnishedTool/: App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs
TarnishedTool-CN/TarnishedTool/Controls/: CoordinateDisplay.xaml  TitleBarWithMaximize.xaml.cs
TarnishedTool-CN/TarnishedTool/Converters/: BoolToShowHideConverter.cs  BooleanAndConverter.cs  ImmuneFillConverter.cs  StringToVisibilityConverter.cs
TarnishedTool-CN/TarnishedTool/Enums/: Affinity.cs  GameVersion.cs
TarnishedTool-CN/TarnishedTool/Interfaces/: IAttackInfoService.cs
TarnishedTool-CN/TarnishedTool/Memory/: BitFlag.cs
TarnishedTool-CN/TarnishedTool/Models/: Act.cs  AttackInfo.cs  CharacterState.cs  EventItem.cs  Item.cs  LoadoutTemplate.cs  PosWithHurtbox.cs  Position.cs  ShopCommand.cs  Weapon.cs
TarnishedTool-CN/TarnishedTool/Services/: AiWindowService.cs  ReminderService.cs
TarnishedTool-CN/TarnishedTool/Utilities/: ExeManager.cs  User32.cs  VersionChecker.cs
TarnishedTool-CN/TarnishedTool/ViewModels/: AdvancedViewModel.cs  AttackInfoViewModel.cs  BaseViewModel.cs  ChrInsWindowViewModel.cs  CreateCustomWarpViewModel.cs  CreateLoadoutViewModel.cs  EnemyViewModel.cs  EventLogViewModel.cs  GracePresetViewModel.cs  (+1 more)
TarnishedTool-master/: AOB特征_原始提取.csv  AOB特征_版本说明.md  支持的游戏版本_来自GameVersion.txt
TarnishedTool-master/TarnishedTool/: MainWindow.xaml  packages.config
erdGameTools/: .gitignore  CMakeLists.txt  README.md
erdGameTools/Resources/: ParamScripts.zh.txt
erdGameTools/Resources/Lang/: zh-CN.txt
erdGameTools/Source/: Common.hpp
erdGameTools/Source/Features/: InspectorTools.hpp  ParamPatches.hpp  Unlocks.hpp
erdGameTools/Source/Game/: EventFlags.cpp  Memory.hpp  SingletonRegistry.hpp
erdGameTools/Source/Main/: FeatureStatus.hpp  Logger.hpp
erdGameTools/src/: grace_test_config.cpp  grace_test_localization.cpp  grace_test_messages.hpp  grace_test_runtime.hpp  grace_test_talkscript.hpp
erdGameTools/src/utils/: talkscript_utils.hpp
scripts/: build.ps1  extract_cn_item_catalog.ps1  generate_mass_itemgib_header.ps1  generate_tga_ct_cn.py  package_mod.ps1
src/: dllmain.cpp  grace_test_config.cpp  grace_test_config.hpp  grace_test_localization.cpp  grace_test_localization.hpp  grace_test_messages.cpp  grace_test_messages.hpp  grace_test_overlay.cpp  grace_test_overlay.hpp  grace_test_runtime.cpp  grace_test_runtime.hpp  grace_test_talkscript.cpp
(+69 files in other folders)
